# agent-memory-eval

./: Dockerfile  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/assets/: architecture.html
src/memeval/: __init__.py  benchmark.py  cli.py  data.py  embed.py  llm.py
tests/: test_memeval.py
