[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "agent-memory-eval"
version = "0.1.0"
description = "Benchmark agent memory strategies (none / full-history / summary / vector retrieval) on a multi-session recall test — which one still answers a question about something said sessions ago, and at what token cost"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Taimour Abdul Karim", email = "taimour.a.karim@gmail.com" }]
keywords = ["agent", "memory", "llm", "retrieval", "rag", "evaluation", "claude", "bedrock"]
dependencies = ["numpy>=1.24"]

[project.optional-dependencies]
dev = ["pytest>=7"]
real = ["anthropic[bedrock]>=0.39", "sentence-transformers>=2.6", "torch>=2.1"]

[project.scripts]
agent-memory-eval = "memeval.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/memeval"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
